@@ -6,7 +6,7 @@
 #
 # 20040930 Colin McCormack - initial release to tcllib
 
-package provide treeql 1.2
+package provide treeql 1.3
 
 package require Tcl 8.5
 package require snit
@@ -26,7 +26,6 @@ snit::type ::treeql {
     # apply the [$tree cmd {expand}$args] form to each node
     # returns the list of results of application
     method apply {cmd args} {
-
 	set result {}
 	foreach node $nodes {
 	    if {[catch {
@@ -45,7 +44,6 @@ snit::type ::treeql {
     # filter nodes by [$tree cmd {expand}$args]
     # returns the list of results of application when application is non nil
     method filter {cmd args} {
-
 	set result {}
 	foreach node $nodes {
 	    if {[catch {
@@ -195,7 +193,7 @@ snit::type ::treeql {
 	return $result
     }
 
-    # Returns list of attribute values of attributes matching $pattern - 
+    # Returns list of attribute values of attributes matching $pattern -
     method get {pattern} {
 	set nodes [$self mapself do_get $pattern]
 	return {}	;# terminate query
@@ -229,7 +227,7 @@ snit::type ::treeql {
     # path from node to root
     method ancestors {args} {
 	set nodes [$self applyself do_ancestors]
-	return $args 
+	return $args
    }
 
     # shim to find $node rootpath by repetitive [parent]
@@ -514,7 +512,7 @@ snit::type ::treeql {
     # return result of new query $query, preserving current node set
     method subquery {args} {
 	set org $nodes	;# save current node set
-	set new [$query query {expand}$args]
+	set new [uplevel 1 [list $query query {expand}$args]]
 	set nodes $org	;# restore old node set
 
 	return $new
@@ -522,7 +520,7 @@ snit::type ::treeql {
 
     # perform a subquery and and in the result
     method andq {q args} {
-	$self and [$self subquery {expand}$q]
+	$self and [uplevel 1 [list $self subquery {expand}$q]]
 	return $args
     }
 
@@ -535,7 +533,7 @@ snit::type ::treeql {
 
     # perform a subquery and or in the result
     method orq {q args} {
-	$self or [$self subquery {expand}$q] 
+	$self or [uplevel 1 [list $self subquery {expand}$q]]
 	return $args
     }
 
@@ -547,7 +545,7 @@ snit::type ::treeql {
 
     # perform a subquery and return the set of nodes not in the result
     method notq {q args} {
-	$self not [$self subquery {expand}$q] 
+	$self not [uplevel 1 [list $self subquery {expand}$q]]
 	return $args
     }
 
@@ -559,10 +557,11 @@ snit::type ::treeql {
 
     # perform a subquery then replace the nodeset
     method transform {q var body args} {
+	upvar 1 $var iter
 	set new {}
-	foreach n [$self subquery {expand}$q] {
-	    uplevel 1 set $var $n
-	    switch [catch {
+	foreach n [uplevel 1 [list $self subquery {expand}$q]] {
+	    set iter $n
+	    switch -exact -- [catch {
 		uplevel 1 $body
 	    } result eo] {
 		0 {
@@ -570,8 +569,8 @@ snit::type ::treeql {
 		    lappend new $result
 		}
 		1 {
-		    # error
-		    error $result	;# pass errors up
+		    # pass errors up
+		    return -code error $result
 		}
 		2 {
 		    # return
@@ -580,11 +579,49 @@ snit::type ::treeql {
 		}
 		3 {
 		    # break
-		    break;
+		    break
 		}
 		4 {
 		    # continue
-		    continue;
+		    continue
+		}
+	    }
+	}
+
+	set nodes $new
+
+	return $args
+    }
+
+    # replace the nodeset
+    method map {var body args} {
+	upvar 1 $var iter
+	set new {}
+	foreach n $nodes {
+	    set iter $n
+	    switch -exact -- [catch {
+		uplevel 1 $body
+	    } result eo] {
+		0 {
+		    # ok
+		    lappend new $result
+		}
+		1 {
+		    # pass errors up
+		    return -code error $result
+		}
+		2 {
+		    # return
+		    set nodes $result
+		    return
+		}
+		3 {
+		    # break
+		    break
+		}
+		4 {
+		    # continue
+		    continue
 		}
 	    }
 	}
@@ -596,20 +633,20 @@ snit::type ::treeql {
 
     # perform a subquery $query then map $body over results
     method foreach {q var body args} {
-	foreach n [$self subquery {expand}$q] {
-	    uplevel 1 set $var $n
+	upvar 1 $var iter
+	foreach n [uplevel 1 [list $self subquery {expand}$q]] {
+	    set iter $n
 	    uplevel 1 $body
 	}
 	return $args
     }
-    
+
     # perform a query, then evaluate $body
     method with {q body args} {
-
-	# save current node set
+	# save current node set, implied reset
 	set org $nodes; set nodes {}
 
-	$self query {expand}$q
+	uplevel 1 [list $self query {expand}$q]
 	set result [uplevel 1 $body]
 
 	# restore old node set
@@ -620,10 +657,10 @@ snit::type ::treeql {
 
     # map $body over $nodes
     method over {var body args} {
-
+	upvar 1 $var iter
 	set result {}
 	foreach n $nodes {
-	    uplevel 1 set $var $n
+	    set iter $n
 	    uplevel 1 $body
 	}
 	return $args
@@ -631,11 +668,10 @@ snit::type ::treeql {
 
     # perform the query
     method query {args} {
-
 	# iterate over the args, treating each as a method invocation
 	while {$args != {}} {
 	    #puts stderr "query $self $args"
-	    set args [$query {expand}$args]
+	    set args [uplevel 1 [list $query {expand}$args]]
 	    #puts stderr "-> $nodes"
 	}
 
@@ -686,7 +722,7 @@ snit::type ::treeql {
 
 	set tree [from args -tree ""]
 
-	$self query {expand}$args
+	uplevel 1 [list $self query {expand}$args]
     }
 
     # Return result, and destroy this query
